--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 文叨的Blog
-SEOTitle: 文叨的博客 | WD Blog
+title: WenDao's Blog
+SEOTitle: 文叨 | WD Blog
 header-img: img/post-bg-desk.jpg
 email: ismethre@gmail.com
 description: "Don't be afraid to be yourself."
