--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: WenDao's Blog
 SEOTitle: 文叨 | WD Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/post-bg-space.jpg
 email: ismethre@gmail.com
 description: "Don't be afraid to be yourself."
 keyword: "WD Blog, 文叨的博客, Android, Apple, Remote Sensing"
